# course_project

./: .gitignore  config.py  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_utils.py
